--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <title>Praktikum RPL</title>
     </head>
     <body>
-        <h2>Hello World</h2>
+        <div>
+            <img src="images/tes.jpg" alt="Foto Profil" width="200px" height="200px">
+            <h2>Hello World</h2>
+        </div>
     </body>
 </html>
