--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
         <title>Praktikum RPL</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>
-            <img src="images/tes.jpg" alt="Foto Profil" width="200px" height="200px">
-            <h2>Hello World</h2>
+        <div id="profile-container">
+            <img id="profile-picture" src="images/tes.jpg" alt="Foto Profil" width="200px" height="200px">
+            <h2 id="profile-name">Ridzky Ardiansyah</h2>
         </div>
     </body>
 </html>
