penambahan tag div untuk header dengan id 'header'

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="header">Ini Header</div>
+        
         <div id="profile-container">
             <img id="profile-picture" src="images/tes.jpg" alt="Foto Profil" width="200px" height="200px">
             <h2 id="profile-name">Ridzky Ardiansyah</h2>
