--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
             <img id="profile-picture" src="images/tes.jpg" alt="Foto Profil" width="200px" height="200px">
             <h2 id="profile-name">Ridzky Ardiansyah</h2>
         </div>
+
+        <div id="footer">Footer</div>
     </body>
 </html>
