--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div id="profile-container">
             <img id="profile-picture" src="images/tes.jpg" alt="Foto Profil" width="200px" height="200px">
             <h2 id="profile-name">Ridzky Ardiansyah</h2>
+            <p id="profile-job">Mahasiswa</p>
         </div>
 
         <div id="footer">Footer</div>
